# laser_assembler

./: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  ros2_migration_readme.md
examples/: CMakeLists.txt  periodic_snapshotter.cpp
include/laser_assembler/: base_assembler.h  base_assembler.hpp  base_assembler_srv.h  base_assembler_srv.hpp  message_filter.hpp  point_cloud2_base_assembler.h  point_cloud_base_assembler.h  point_cloud_conversion.h  point_cloud_conversion.hpp  point_field_conversion.h  point_field_conversion.hpp
laser_assembler_srv_gen/: CMakeLists.txt  package.xml
laser_assembler_srv_gen/srv/: AssembleScans.srv
launch/: test_laser_assembler.launch.py  test_laser_assembler.yaml
msg/: AssembleScans2Publish.msg
src/: grab_cloud_data.cpp  laser_scan_assembler.cpp  laser_scan_assembler_srv.cpp  merge_clouds.cpp  point_cloud2_assembler.cpp  point_cloud_assembler.cpp  point_cloud_assembler_srv.cpp
srv/: AssembleScans.srv  AssembleScans2.srv  AssembleScans2Blocking.srv
test/: dummy_scan_producer.cpp  test_assembler.cpp
