<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>laser_assembler</name>
  
  <description>
    Provides nodes to assemble point clouds from either LaserScan or PointCloud messages
  </description>
  
  <version>1.7.7</version>
  
  <author>Vijay Pradeep</author>
  <maintainer email="jon.binney@gmail.com">Jonathan Binney</maintainer>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/laser_assembler</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>builtin_interfaces</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
