<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_assembler_srv_gen</name>
  <version>1.8.4</version>
  <description>
        Generates Assemble scans service.
  </description>
  <maintainer email="jon.binney@gmail.com">Jonathan Binney</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/laser_assembler</url>
<!--   <url type="bugtracker">https://github.com/ros/bond_core/issues</url> -->
  <url type="repository">https://github.com/ros-perception/laser_assembler.git</url>
  <author>Vijay Pradeep</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>bondcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
 
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>rclcpp</test_depend>
<!--   <test_depend>ament_cmake_gtest</test_depend> -->
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
